# raptor

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  changelog.md  pyproject.toml
.azuredevops/templates/: build.yml  cd.yml  check.yml  ci.yml  configure_python.yml  generate_docs.yml  pre_commit.yml  release.yml  tag_release.yml  test.yml  update_wiki.yml
.github/workflows/: build.yml  check.yml  documentation.yml  main.yml  pre_commit.yml  register.yml  sync-readme.yml  unit_test.yml
.taskfile/: readme.md  taskfile.yml  taskfile_main.yml
devops_pipelines/templates/: config.yml  create_and_check_package_repo.yml  create_and_check_project_repo.yml  install_and_configure_python.yml  main.yml  pre_commit.yml
docs/: README.md  index.md
package_repo/: cookiecutter.json  local_extensions.py
package_repo/hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
package_repo/{{ cookiecutter.repo_name }}/: .coveragerc  .coveragerc_pipeline  .envrc  .gitignore  .pre-commit-config.yaml  README.md  aml_environment.yml  azurepipelines-coverage.yml  changelog.md  component_env.yml  conda.yml  environment.yml  pyproject.toml  taskfile.yml
project_repo/: cookiecutter.json  local_extensions.py
project_repo/hooks/: __init__.py  post_gen_project.py  pre_gen_project.py
project_repo/{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  README.md  azure-pipelines.yml  environment.yml  pyproject.toml  taskfile.yml
templates/devops/: generate_docs.yml  test.yml  update_wiki.yml
tests/: test_requirements.txt
(+68 files in other folders)
