[project]
name = "raptor"
version = "1.4.0"
requires-python = ">=3.11"
dependencies = [
    "setuptools (==65.6.3)",
    "pre-commit (==2.19.0)",
    "cookiecutter (==2.4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"